[package]
name = "microui"
authors = ["Wael El Oraiby"]
version = "0.2.2"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
description = "MicroUI (immediate mode GUI) library in pure rust"
repository = "https://github.com/NeoCogi/microui-rs"

[lib]
name ="microui"

[dependencies]
libc = "0.2.138"
bitflags = "1.3.2"

