[package]
name = "microui"
authors = ["Wael El Oraiby"]
version = "0.2.4"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
description = "MicroUI (immediate mode GUI) library in pure rust"
repository = "https://github.com/NeoCogi/microui-rs"
categories = ["no-std", "gui", "rendering"]

[lib]
name = "microui"

[dependencies]
bitflags = "2.4.1"

[dev-dependencies]
glow = "0.13.0"
sdl2 = "0.36.0"
