[package]
name = "demo-no_std"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "BSD-3-Clause"
authors = ["Raja Lehtihet <raja.lehtihet@gmail.com>", "Wael El Oraiby <wael.eloraiby@gmail.com>"]
repository = "https://github.com/NeoCogi/microui-rs"


[dependencies]
libc = "0.2.137"
microui = { path = ".." }