[package]
name = "demo-sdl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
microui = {path = ".."}
glow = "0.11.2"
libc = "0.2.138"

[profile.release]
panic = 'abort'
opt-level = "z"
overflow-checks = false
debug-assertions = false
lto = true
incremental = false
rpath=false
codegen-units=1
